wxc/include/ewxw/wxc_glue.h


void       wxAcceleratorEntry_Delete( TSelf(wxAcceleratorEntry) _obj );

int        wxAcceleratorEntry_GetCommand( TSelf(wxAcceleratorEntry) _obj );

int        wxAcceleratorEntry_GetFlags( TSelf(wxAcceleratorEntry) _obj );

int        wxAcceleratorEntry_GetKeyCode( TSelf(wxAcceleratorEntry) _obj );

void       wxAcceleratorEntry_Set( TSelf(wxAcceleratorEntry) _obj, int flags, int keyCode, int cmd );


/* wxAcceleratorTable */
TClassDef(wxAcceleratorTable)
TClass(wxAcceleratorTable) wxAcceleratorTable_Create( int n, void* entries );

void       wxAcceleratorTable_Delete( TSelf(wxAcceleratorTable) _obj );